--- a/src/resources/layout.html
+++ b/src/resources/layout.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<p>Hello world</p>
+<h1>Raspberry Pi Challenger Appears!</h1>
+
+<div id="content">the page content goes here</div>
 
 </body>
 </html>
