--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -8,7 +8,7 @@
 
 <h1>Raspberry Pi Challenger Appears!</h1>
 
-<div id="content">the page content goes here</div>
+<div id="main">the page content goes here</div>
 
 </body>
 </html>
