--- a/src/public/overview.html
+++ b/src/public/overview.html
@@ -6,6 +6,19 @@
 </head>
 <body>
 
+<table id="services">
+    <tr>
+        <th>Name</th>
+        <th>Score</th>
+    </tr>
+    <tr>
+        <td><a href="http://some-service-url">User 1</a></td>
+        <td>TODO</td>
+    </tr>
+</table>
+
+<h2>Register a New Service</h2>
+
 <form method="post" action="/register">
     <table>
         <tr>
