Show service score

--- a/src/public/overview.html
+++ b/src/public/overview.html
@@ -12,8 +12,8 @@
         <th>Score</th>
     </tr>
     <tr>
-        <td><a href="http://some-service-url">User 1</a></td>
-        <td>TODO</td>
+        <td><a href="http://knowyourmeme.com/memes/its-over-9000">Goku</a></td>
+        <td>9001</td>
     </tr>
 </table>
 
