Use new system metaphor

--- a/src/public/overview.html
+++ b/src/public/overview.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<table id="services">
+<table id="participants">
     <tr>
-        <th>Service</th>
+        <th>Participant</th>
         <th>Score</th>
     </tr>
     <tr>
@@ -17,7 +17,7 @@
     </tr>
 </table>
 
-<h2>Register a New Service</h2>
+<h2>Join The Tournament</h2>
 
 <form method="post" action="/register">
     <table>
