--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Overview</title>
+    <title>Tournament</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
