Layout to black

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<h1>Raspberry Pi Challenger Appears!</h1>
+<h1>Raspberry Pi Challenger Appears! <span class="start-polling"> -- <a href="/poll" target="_blank">Start polling</a></span></h1>
+
+<div class="bread-crumb-placeholder">The breadcrumb goes here</div>
 
 <h2>The Title</h2>
 
