--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<div class="bread-crumb">
+	<a href="/">Front page</a> &gt;&gt; Participant
+</div>
+
 <table>
     <tr>
         <th style="text-align: left">Display Name</th>
