--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<div class="bread-crumb">
+	Front page
+</div>
+
 <table id="participants">
     <tr>
         <th>Participant</th>
