Optimized memory usage: keep only N recent strikes in memory

--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="bread-crumb">
-	<a href="/">Front page</a> &gt;&gt; Participant
+    <a href="/">Front page</a> &gt;&gt; Participant
 </div>
 
 <table>
@@ -30,9 +30,9 @@
 
 <div id="recent-failures"></div>
 
-<h2>Current Round</h2>
+<h2>All Recent</h2>
 
-<div id="current-round"></div>
+<div id="recent-strikes"></div>
 
 </body>
 </html>
