Show recent finished rounds

--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -26,13 +26,17 @@
     </tr>
 </table>
 
-<h2>Recent Failures</h2>
+<h2>Recent Failed Challenges</h2>
 
 <div id="recent-failures"></div>
 
-<h2>All Recent</h2>
+<h2>Recent Challenges</h2>
 
 <div id="recent-strikes"></div>
+
+<h2>Recent Finished Rounds</h2>
+
+<div id="recent-finished-rounds"></div>
 
 </body>
 </html>
