Show the challenge price in strikes list

--- a/src/public/strikes-list.html
+++ b/src/public/strikes-list.html
@@ -10,6 +10,7 @@
 <table class="strikes">
     <tr>
         <th>Time</th>
+        <th>Price</th>
         <th>Input</th>
         <th>Expected</th>
         <th>Actual</th>
@@ -17,6 +18,7 @@
     </tr>
     <tr class="hit">
         <td>2012-11-21 22:58:14.605</td>
+        <td>42</td>
         <td>1 + 2</td>
         <td>3</td>
         <td>3</td>
@@ -24,6 +26,7 @@
     </tr>
     <tr class="miss">
         <td>2012-11-21 22:58:14.586</td>
+        <td>42</td>
         <td>1 + 2</td>
         <td>3</td>
         <td>4</td>
@@ -31,6 +34,7 @@
     </tr>
     <tr class="error">
         <td>2012-11-21 22:58:14.571</td>
+        <td>42</td>
         <td>1 + 2</td>
         <td>3</td>
         <td></td>
