--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>The Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script language="javascript" type="text/javascript" src="js/jquery.js"></script>
 </head>
 <body>
 
