--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -5,6 +5,8 @@
     <title>The Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script language="javascript" type="text/javascript" src="js/jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="js/jquery.flot.js"></script>
+    <script language="javascript" type="text/javascript" src="js/jquery.flot.stack.js"></script>
 </head>
 <body>
 
