Plot score history

--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -8,17 +8,21 @@
 <body>
 
 <div class="bread-crumb">
-	Front page
+    Front page
 </div>
 
 <table id="participants">
     <tr>
         <th>Participant</th>
         <th>Score</th>
+        <th>Score History</th>
     </tr>
     <tr>
         <td><a href="http://knowyourmeme.com/memes/its-over-9000">Goku</a></td>
         <td>9001</td>
+        <td>
+            <div class="score-history" data-url="/participant-123/score-history"></div>
+        </td>
     </tr>
 </table>
 
