--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -8,6 +8,7 @@
     <script language="javascript" type="text/javascript" src="js/jquery.dateFormat.js"></script>
     <script language="javascript" type="text/javascript" src="js/jquery.flot.js"></script>
     <script language="javascript" type="text/javascript" src="js/jquery.flot.stack.js"></script>
+    <script language="javascript" type="text/javascript" src="js/challenger.js"></script>
 </head>
 <body>
 
