--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -26,6 +26,8 @@
     </tr>
 </table>
 
+<div class="score-history" style="width: 100%; height: 250px;" data-url="/participant-123/score-history"></div>
+
 <h2>Recent Failed Challenges</h2>
 
 <div id="recent-failures"></div>
