Show velocity and max velocity

--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -15,11 +15,13 @@
     <tr>
         <th>Participant</th>
         <th>Score</th>
-        <th>Score History</th>
+        <th>Velocity</th>
+        <th>History</th>
     </tr>
     <tr>
         <td><a href="http://knowyourmeme.com/memes/its-over-9000">Goku</a></td>
         <td>9001</td>
+        <td>8/10</td>
         <td>
             <div class="score-history" data-url="/participant-123/score-history"></div>
         </td>
