--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -24,6 +24,10 @@
         <th style="text-align: left">Score</th>
         <td id="score">3200</td>
     </tr>
+    <tr>
+        <th style="text-align: left">Velocity</th>
+        <td id="velocity">8/10</td>
+    </tr>
 </table>
 
 <div class="score-history" style="width: 100%; height: 250px;" data-url="/participant-123/score-history"></div>
