Less intrusive navigation

--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="bread-crumb">
-    <a href="/">Front page</a> &gt;&gt; Participant
+<div class="navigation">
+    <a href="/">Back to Overview</a>
 </div>
 
 <table>
