Bar graph visualization of the overall score stats

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>The Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script language="javascript" type="text/javascript" src="js/jquery.js"></script>
-    <script language="javascript" type="text/javascript" src="js/jquery.dateFormat.js"></script>
-    <script language="javascript" type="text/javascript" src="js/jquery.flot.js"></script>
-    <script language="javascript" type="text/javascript" src="js/jquery.flot.stack.js"></script>
-    <script language="javascript" type="text/javascript" src="js/challenger.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.dateFormat.js"></script>
+    <script type="text/javascript" src="js/jquery.flot.js"></script>
+    <script type="text/javascript" src="js/jquery.flot.stack.js"></script>
+    <script type="text/javascript" src="js/challenger.js"></script>
+    <!-- TODO: should be within overall-scores.html snippet -->
+    <script type="text/javascript" src="js/overall-score-stats.js"></script>
 </head>
 <body>
 
