--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<a href="/overall">Overall scores for all participants</a>
+
+<hr />
+
 <table id="participants">
     <tr>
         <th>Participant</th>
