--- a/src/public/overall-scores.html
+++ b/src/public/overall-scores.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Participant</title>
+    <title>Overall Scores</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
