--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -7,10 +7,6 @@
 </head>
 <body>
 
-<a href="/overall">Overall scores for all participants</a>
-
-<hr />
-
 <table id="participants">
     <tr>
         <th>Participant</th>
@@ -27,6 +23,9 @@
         </td>
     </tr>
 </table>
+
+<p><a href="/overall">Overall scores for all participants</a></p>
+
 
 <h2>Join The Tournament</h2>
 
