Layout tweaks, adds Solita logo

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -20,5 +20,9 @@
 
 <div id="main">the page content goes here</div>
 
+<footer>
+    <img src="img/solita-logo.png" alt="Solita" />
+</footer>
+
 </body>
 </html>
