Fixes layout and some other tweaks

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -14,11 +14,17 @@
 </head>
 <body>
 
-<h1>Raspberry Pi Challenger Appears!</h1>
+<section>
+    <hr class="decorative-border" />
 
-<h2>The Title</h2>
-
-<div id="main">the page content goes here</div>
+	<h1>/dev/tasting/raspberry</h1>
+	
+	<h2>The Title</h2>
+	
+	<div id="main">the page content goes here</div>
+	
+	<div class="push"></div>
+</section>
 
 <footer>
     <img src="img/solita-logo.png" alt="Solita" />
