--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -29,7 +29,7 @@
 
 <h2>Join The Tournament</h2>
 
-<form method="post" action="/register">
+<form method="post" action="/register" accept-charset="UTF-8">
     <table>
         <tr>
             <td><label for="name">Display Name</label></td>
