Section links on participant details page

--- a/src/public/participant.html
+++ b/src/public/participant.html
@@ -8,7 +8,10 @@
 <body>
 
 <div class="navigation">
-    <a href="/">Back to Overview</a>
+    <a href="/">Back to Overview</a><br>
+    <a href="#failures">Recent Failed Challenges</a><br>
+    <a href="#challenges">Recent Challenges</a><br>
+    <a href="#rounds">Recent Finished Rounds</a>
 </div>
 
 <table>
@@ -32,15 +35,15 @@
 
 <div class="score-history" style="width: 100%; height: 250px;" data-url="/participant-123/score-history"></div>
 
-<h2>Recent Failed Challenges</h2>
+<h2><a name="failures"></a>Recent Failed Challenges</h2>
 
 <div id="recent-failures"></div>
 
-<h2>Recent Challenges</h2>
+<h2><a name="challenges"></a>Recent Challenges</h2>
 
 <div id="recent-strikes"></div>
 
-<h2>Recent Finished Rounds</h2>
+<h2><a name="rounds"></a>Recent Finished Rounds</h2>
 
 <div id="recent-finished-rounds"></div>
 
