--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -21,6 +21,8 @@
 
     <h2>The Title</h2>
 
+    <div id="error-message">any error message goes here</div>
+
     <div id="main">the page content goes here</div>
 
     <div class="push"></div>
