--- a/src/public/strikes-list.html
+++ b/src/public/strikes-list.html
@@ -11,6 +11,7 @@
     <tr>
         <th>Time</th>
         <th>Price</th>
+        <th>URI</th>
         <th>Input</th>
         <th>Expected</th>
         <th>Actual</th>
@@ -19,7 +20,9 @@
     <tr class="hit">
         <td>2012-11-21 22:58:14.605</td>
         <td>42</td>
-        <td>1 + 2</td>
+        <td>/+</td>
+        <td>1
+2</td>
         <td>3</td>
         <td>3</td>
         <td>200 OK</td>
@@ -27,7 +30,9 @@
     <tr class="miss">
         <td>2012-11-21 22:58:14.586</td>
         <td>42</td>
-        <td>1 + 2</td>
+        <td>/+</td>
+        <td>1
+2</td>
         <td>3</td>
         <td>4</td>
         <td>200 OK</td>
@@ -35,7 +40,9 @@
     <tr class="error">
         <td>2012-11-21 22:58:14.571</td>
         <td>42</td>
-        <td>1 + 2</td>
+        <td>/+</td>
+        <td>1
+2</td>
         <td>3</td>
         <td></td>
         <td>404 Not Found</td>
