Relabeled the application

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -17,7 +17,7 @@
 <section>
     <hr class="decorative-border"/>
 
-    <h1>/dev/tasting/raspberry</h1>
+    <h1>/dev/solita/challenger</h1>
 
     <h2>The Title</h2>
 
