bunch of layout tweaks

--- a/src/public/layout.html
+++ b/src/public/layout.html
@@ -29,7 +29,13 @@
 </section>
 
 <footer>
-    <img src="img/solita-logo.png" alt="Solita"/>
+	<img src="img/dg-icon-small.png" alt="Developer Garage" class="dg-logo-footer" />
+	
+	<div class="solita_delivered">
+		<h3>Delivered by:</h3>
+	    <img src="img/solita-logo.png" alt="Solita"/>
+    </div>
+    <p><strong>Developer Garage</strong> - Getting our hands dirty</p>
 </footer>
 
 </body>
