--- a/src/public/tournament.html
+++ b/src/public/tournament.html
@@ -26,26 +26,27 @@
 
 <p><a href="/overall">Overall scores for all participants</a></p>
 
-
-<h2>Join The Tournament</h2>
-
-<form method="post" action="/register" accept-charset="UTF-8">
-    <table>
-        <tr>
-            <td><label for="name">Display Name</label></td>
-            <td><input type="text" id="name" name="name"/></td>
-        </tr>
-        <tr>
-            <td><label for="url">Service URL</label></td>
-            <td><input type="text" id="url" name="url"/></td>
-        </tr>
-        <tr>
-            <td colspan="2" style="text-align: right;">
-                <button type="submit">Register</button>
-            </td>
-        </tr>
-    </table>
-</form>
+<div class="join-box">
+	<h2>Join The Tournament</h2>
+	
+	<form method="post" action="/register" accept-charset="UTF-8">
+	    <table>
+	        <tr>
+	            <td><label for="name">Display Name</label></td>
+	            <td><input type="text" id="name" name="name"/></td>
+	        </tr>
+	        <tr>
+	            <td><label for="url">Service URL</label></td>
+	            <td><input type="text" id="url" name="url"/></td>
+	        </tr>
+	        <tr>
+	            <td colspan="2" style="text-align: right;">
+	                <button type="submit">Register</button>
+	            </td>
+	        </tr>
+	    </table>
+	</form>
+</div>
 
 </body>
 </html>
